# gf256

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: test.yml
benches/: crc.rs  find-p.rs  gf.rs  gfdiv.rs  gfmul.rs  lfsr.rs  mul.rs  raid.rs  rs.rs  shamir.rs  xmul.rs
examples/: crc.rs  find-p.rs  lfsr.rs  raid.rs  rs.rs  shamir.rs
gf256-macros/: Cargo.toml
gf256-macros/src/: common.rs  crc.rs  gf.rs  lfsr.rs  lib.rs  p.rs  raid.rs  rs.rs  shamir.rs
src/: crc.rs  gf.rs  lfsr.rs  lib.rs  macros.rs  p.rs  raid.rs  rs.rs  shamir.rs  traits.rs  xmul.rs
templates/: crc.rs  gf.rs  lfsr.rs  p.rs  raid.rs  rs.rs  shamir.rs
