[package]
name = "gf256"
description = "A Rust library containing Galois-field types and utilities"
authors = ["Christopher Haster <chaster@utexas.edu>"]
repository = "https://github.com/geky/gf256"
version = "0.1.0"
edition = "2018"
license = "MIT"

[features]
# Enables features only found on a nightly compiler
#
# Most notably this is required to leverage pmull on aarch64, see this
# tracking issue:
# https://github.com/rust-lang/rust/issues/48556
#
nightly = []

# Disable carry-less multiplication instructions, forcing the use
# of naive bitwise implementations
#
# This is mostly available for testing, and in the case that hardware
# xmul is bugged (or more likely this crate is bugged).
#
no-xmul = ["gf256-macros/no-xmul"]

# Disable lookup tables, relying only on hardware or naive
# implementations
#
# This may be useful on memory constrained devices
#
no-tables = ["gf256-macros/no-tables"]

# Limit lookup tables to "small tables", tables with <16 elements
#
# This provides a compromise between full 256-byte tables and no-tables,
# which may be useful on memory constrained devices
#
# Currently only affects CRC-function generation
#
small-tables = ["gf256-macros/small-tables"]

# Enable features that depend on ThreadRng
#
# This is primarily used to provide a default Rng implementation for
# Shamir's secret-sharing implementations
#
thread-rng = ["rand/std", "rand/std_rng"]

# Make LFSR macros and structs available
lfsr = ["gf256-macros/lfsr", "rand"]

# Make CRC macros and functions available
crc = ["gf256-macros/crc"]

# Make RAID-parity macros and structs available
raid = ["gf256-macros/raid"]

# Make Reed-Solomon macros and functions available
#
# Note this requires alloc
#
rs = ["gf256-macros/rs"]

# Make Shamir secret-sharing macros and functions available
#
# Note this requires alloc and rand, as well as std if
# ThreadRng (default) is used
#
shamir = ["gf256-macros/shamir", "rand"]

[dev-dependencies]
criterion = {version="0.3", features=["html_reports"]}
rand = "0.8.3"
rand_core = "0.6.3"
structopt = "0.3.25"
flate2 = "1.0.22"

[dependencies]
gf256-macros = {path="gf256-macros", version="0.1.0"}
cfg-if = "1.0.0"
rand = {version="0.8.3", default-features=false, optional=true}

[[bench]]
name = "xmul"
harness = false

[[bench]]
name = "gf"
harness = false

[[bench]]
name = "find-p"
harness = false

[[bench]]
name = "lfsr"
harness = false

[[bench]]
name = "crc"
harness = false

[[bench]]
name = "shamir"
harness = false

[[bench]]
name = "raid"
harness = false

[[bench]]
name = "rs"
harness = false
