[package]
name = "gf256-macros"
description = "Proc-macros for the gf256 crate"
authors = ["Christopher Haster <chaster@utexas.edu>"]
repository = "https://github.com/geky/gf256"
version = "0.3.0"
edition = "2018"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[features]
# See gf256/Cargo.toml for documentation over these features
no-xmul = []
no-tables = []
small-tables = []
crc = []
lfsr = []
shamir = []
raid = []
rs = []

[dependencies]
syn = {version="1.0.73", features=["full"]}
quote = "1.0.9"
proc-macro2 = "1.0.27"
darling = "0.12.4"
evalexpr = "6.4.0"
